--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.estsoft.datepickerdialog.MainActivity">
+    tools:context="com.bit2016.datepickerdialog.MainActivity">
 
 
     <Button
@@ -15,28 +15,58 @@
         android:layout_height="wrap_content"
         android:text="DatePicker Dialog"
         android:id="@+id/buttonDatePicker"
+        android:onClick="dialogDatePicker"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:onClick="dialogDatePicker"/>
+        android:layout_marginTop="74dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:hint="생년월일"
+        android:focusable="false"
+        android:enabled="false"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TimePicker Dialog"
         android:id="@+id/buttonTimePicker"
+        android:layout_marginTop="23dp"
         android:layout_below="@+id/buttonDatePicker"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignRight="@+id/buttonDatePicker"
+        android:layout_alignEnd="@+id/buttonDatePicker" />
 
-    <EditText
+    <TextView
+        android:text="~"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_above="@+id/buttonTimePicker"
+        android:id="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="시작일"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/buttonDatePicker"
-        android:layout_toStartOf="@+id/buttonDatePicker"
-        android:hint="생년월일"
-        android:focusable="false"
-        android:enabled="false" />
+        android:layout_toStartOf="@+id/buttonDatePicker" />
+
+    <TextView
+        android:text="종료일"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_toRightOf="@+id/buttonTimePicker"
+        android:layout_toEndOf="@+id/buttonTimePicker" />
 
 
 </RelativeLayout>
